add ChatService